# DisplayGraphicObjects

./: README.md  pyproject.toml
dgo/: app.py  main.py
dgo/app/: poligono.py  ponto.py  reta.py  ui_main_window.py  viewport.py  window.py  xml.py
dgo/gui/: main_win.py  tela.qml  ui_main_window.py
dgo/objects/: object.py  poligono.py  ponto.py  reta.py  viewport.py  window.py
dgo/tools/: xml.py
tests/: entrada2.xml  entrada3.xml  entrada4.xml  saida.txt  test_dgo.py
