[tool.poetry]
name = "DGO"
version = "0.1.0"
description = "Display Graphic Objects"
authors = ["ReinaldoJunioDias <reinaldodiasabreu@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.6,<3.11"
PySide6 = "^6.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
startapp = "dgo.main:start"
